--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -13,13 +13,16 @@ std = ["concordium-std/std"]
 bump_alloc = ["concordium-std/bump_alloc"]
 
 [dependencies]
-concordium-std = { version = "10.1", default-features = false }
+concordium-std = { version = "10.0", default-features = false }
+
 
 [dev-dependencies]
-concordium-smart-contract-testing = "4.3"
+concordium-smart-contract-testing = "4.2"
+concordium-std-derive = "6.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
+path = "src/lib.rs"
 
 [profile.release]
 opt-level = "s"
