--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@concordium/web-sdk": "^7.5.0",
     "next": "15.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.8.6",
