--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,11 +1,13 @@
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [package]
-name = "staking_contract"
+name = "concordium_staking"
 version = "0.1.0"
 edition = "2021"
 license = "MPL-2.0"
-authors = ["Donatus Prince <donatusprinc@.com>"]
+authors = [ "Bhupendra Bisht <bhupendrabisht61049@gmail.com>" ]
+description = "Staking Platform On Concordium"
 
 [features]
 default = ["std"]
@@ -13,16 +15,14 @@ std = ["concordium-std/std"]
 bump_alloc = ["concordium-std/bump_alloc"]
 
 [dependencies]
-concordium-std = { version = "10.0", default-features = false }
-
+concordium-std = {version = "10.0", default-features = false}
+concordium-cis2 = {version = "6.1.0"}
 
 [dev-dependencies]
 concordium-smart-contract-testing = "4.2"
-concordium-std-derive = "6.0"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
-path = "src/lib.rs"
+crate-type=["cdylib", "rlib"]
 
 [profile.release]
 opt-level = "s"
