--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -14,6 +14,7 @@ bump_alloc = ["concordium-std/bump_alloc"]
 
 [dependencies]
 concordium-std = { version = "10.0", default-features = false }
+concordium-cis2 = "6.2.0"
 
 
 [dev-dependencies]
